--- a/Protein.html
+++ b/Protein.html
@@ -42,14 +42,21 @@
 
 <div class="w3-container w3-section">
   <ul class="w3-navbar w3-card-2 ran-teal">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Information</a></li>
+    <li><a href="https://fatgod12.github.io/RannsakaAdventure/#">Home</a></li>
+    <li><a href="https://fatgod12.github.io/RannsakaAdventure/aboutus">About Us</a></li>
+    <li><a href="https://fatgod12.github.io/RannsakaAdventure/sales">Sales</a></li>
     <li class="w3-dropdown-hover">
       <a href="#">Products <i class="fa fa-caret-down"></i></a>
       <div class="w3-dropdown-content ran-teal w3-card-4">
-        <a href="#">All-Natural Soap</a>
-        <a href="#">Energy Belt</a>
-        <a href="#">Protein Electrolyte Drinks</a>
+        <a href="https://fatgod12.github.io/RannsakaAdventure/Soap">All Natural Soap</a>
+        <a href="https://fatgod12.github.io/RannsakaAdventure/belt">Rechargeable Belt</a>
+        <a href="https://fatgod12.github.io/RannsakaAdventure/Protein">Protein Energy Drink</a>
+            </div>
+        <li class="w3-dropdown-hover">
+      <a href="#">People <i class="fa fa-caret-down"></i></a>
+      <div class="w3-dropdown-content ran-teal w3-card-4">
+        <a href="https://fatgod12.github.io/RannsakaAdventure/jim">Jim</a>
+        <a href="https://fatgod12.github.io/RannsakaAdventure/Danteh">Danteh</a>
       </div>
     </li>
   </ul>
